# llm-gateway-platform

./: .env.example  .gitignore  .ruff.toml  LICENSE  Makefile  README.md  architecture.md  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml
benchmarks/: cache_hit_rate.py  throughput.py
caching/: cache_manager.py  exact_cache.py  redis_cache.py  semantic_cache.py
configs/: caching.yaml  models.yaml  routing.yaml
docs/: failures.md  tradeoffs.md
experiments/: caching_impact.ipynb  routing_strategies.ipynb
failure_handling/: circuit_breaker.py  retry.py
gateway/: batcher.py  server.py
gateway/control_plane/: fallback_policies.py  router.py
gateway/core/: batcher.py  heartbeat.py
gateway/middleware/: auth.py  logging.py  rate_limit.py
gateway/routers/: base.py  cost_aware.py  fallback.py  latency_aware.py
infra/: docker-compose.yml
infra/k8s/: production-pack.yaml
load_balancing/: least_busy.py  priority_queue.py  round_robin.py
load_testing/: locustfile.py
load_testing/scenarios/: burst.py  steady_state.py
multi_tenant/: budget_enforcer.py  isolation.py  key_manager.py  quota_manager.py
observability/: audit.py  ledger.py  logging_middleware.py  prometheus.py
observability/metrics/: cost_metrics.py  prometheus.py
providers/: abstract.py  anthropic.py  base.py  factory.py  gemini.py  groq.py  openai.py  together.py  vllm.py
reliability/: circuit_breaker.py
routers/: adaptive.py  base.py  cost_aware.py  fallback.py  latency_aware.py
security/: cors.py  firewall.py  headers.py  input_guard.py  rate_limiter.py
(+5 files in other folders)
